<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activityui.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:titleTextColor="@android:color/white" />

    <FrameLayout
        android:id="@+id/container_main_fragment"
        android:layout_width="417dp"
        android:layout_height="822dp"
        android:background="#F5F5F5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottom_navbar" />

    <com.gauravk.bubblenavigation.BubbleNavigationLinearView
        android:id="@+id/bottom_navbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rect_white"
        android:elevation="8dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/main_toolbar">

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/nav_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:bt_colorActive="@color/purple_700"
            app:bt_colorInactive="@color/default_inactive"
            app:bt_icon="@drawable/ic_movie"
            app:bt_shape="@drawable/bottom_nav_item_background_stroke"
            app:bt_title="@string/tab_title_movie" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/nav_tvshow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:bt_colorActive="@color/purple_700"
            app:bt_colorInactive="@color/default_inactive"
            app:bt_icon="@drawable/ic_tv_show"
            app:bt_shape="@drawable/bottom_nav_item_background_stroke"
            app:bt_title="@string/tab_title_tvshow" />

    </com.gauravk.bubblenavigation.BubbleNavigationLinearView>

</androidx.constraintlayout.widget.ConstraintLayout>